@@ -20,6 +20,7 @@
 
 package password.pwm.config.stored;
 
+import password.pwm.bean.DomainID;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.PwmSettingTemplate;
 import password.pwm.config.PwmSettingTemplateSet;
@@ -30,22 +31,18 @@ import password.pwm.config.value.ValueTypeConverter;
 import password.pwm.error.PwmUnrecoverableException;
 import password.pwm.i18n.PwmLocaleBundle;
 import password.pwm.util.java.JavaHelper;
-import password.pwm.util.java.LazySupplier;
 import password.pwm.util.logging.PwmLogger;
-import password.pwm.util.secure.HmacAlgorithm;
 import password.pwm.util.secure.PwmSecurityKey;
-import password.pwm.util.secure.SecureEngine;
 
 import java.time.Instant;
 import java.util.Collections;
 import java.util.EnumSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Predicate;
-import java.util.function.Supplier;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 
 /**
@@ -57,11 +54,9 @@ public class StoredConfigurationImpl implements StoredConfiguration
 {
     private final String createTime;
     private final Instant modifyTime;
-    private final Map<StoredConfigItemKey, StoredValue> storedValues;
-    private final Map<StoredConfigItemKey, ValueMetaData> metaValues;
-    private final PwmSettingTemplateSet templateSet;
-
-    private final transient Supplier<String> valueHashSupplier = new LazySupplier<>( this::valueHashImpl );
+    private final Map<StoredConfigKey, StoredValue> storedValues;
+    private final Map<StoredConfigKey, ValueMetaData> metaValues;
+    private final Map<DomainID, PwmSettingTemplateSet> templateSet;
 
     private static final PwmLogger LOGGER = PwmLogger.forClass( StoredConfigurationImpl.class );
 
@@ -69,11 +64,9 @@ public class StoredConfigurationImpl implements StoredConfiguration
     {
         this.createTime = storedConfigData.getCreateTime();
         this.modifyTime = storedConfigData.getModifyTime();
-        this.metaValues = Collections.unmodifiableMap( storedConfigData.getMetaDatas() );
-        this.templateSet = readTemplateSet( storedConfigData.getStoredValues() );
-
-        final Map<StoredConfigItemKey, StoredValue> tempMap = removeDefaultSettingValues( storedConfigData.getStoredValues(), templateSet );
-        this.storedValues = Collections.unmodifiableMap( tempMap );
+        this.metaValues = Map.copyOf( new TreeMap<>( storedConfigData.getMetaDatas() ) );
+        this.templateSet = TemplateSetReader.readTemplateSet( storedConfigData.getStoredValues() );
+        this.storedValues = Map.copyOf( new TreeMap<>( storedConfigData.getStoredValues() ) );
     }
 
     StoredConfigurationImpl()
@@ -82,34 +75,8 @@ public class StoredConfigurationImpl implements StoredConfiguration
         this.modifyTime = Instant.now();
         this.storedValues = Collections.emptyMap();
         this.metaValues = Collections.emptyMap();
-        this.templateSet = readTemplateSet( Collections.emptyMap() );
+        this.templateSet = TemplateSetReader.readTemplateSet( Collections.emptyMap() );
     }
-
-    private static Map<StoredConfigItemKey, StoredValue> removeDefaultSettingValues(
-            final Map<StoredConfigItemKey, StoredValue> valueMap,
-            final PwmSettingTemplateSet pwmSettingTemplateSet
-    )
-    {
-        final Predicate<Map.Entry<StoredConfigItemKey, StoredValue>> checkIfValueIsDefault = entry ->
-        {
-            if ( StoredConfigItemKey.RecordType.SETTING.equals( entry.getKey().getRecordType() ) )
-            {
-                final String loopHash = entry.getValue().valueHash();
-                final String defaultHash = entry.getKey().toPwmSetting().getDefaultValue( pwmSettingTemplateSet ).valueHash();
-                return !Objects.equals( loopHash, defaultHash );
-            }
-            return true;
-        };
-
-        final Map<StoredConfigItemKey, StoredValue> results = valueMap.entrySet()
-                .parallelStream()
-                .filter( checkIfValueIsDefault )
-                .collect( Collectors.toMap( Map.Entry::getKey, Map.Entry::getValue ) );
-
-        return Collections.unmodifiableMap( results );
-    }
-
-
 
     @Override
     public StoredConfiguration copy()
@@ -125,7 +92,7 @@ public class StoredConfigurationImpl implements StoredConfiguration
     @Override
     public Optional<String> readConfigProperty( final ConfigurationProperty propertyName )
     {
-        final StoredConfigItemKey key = StoredConfigItemKey.fromConfigurationProperty( propertyName );
+        final StoredConfigKey key = StoredConfigKey.forConfigurationProperty( propertyName );
         final StoredValue storedValue = storedValues.get( key );
         if ( storedValue != null )
         {
@@ -135,16 +102,9 @@ public class StoredConfigurationImpl implements StoredConfiguration
     }
 
     @Override
-    public boolean isDefaultValue( final PwmSetting setting, final String profileID )
+    public Map<String, String> readLocaleBundleMap( final PwmLocaleBundle pwmLocaleBundle, final String keyName, final DomainID domainID )
     {
-        final StoredConfigItemKey key = StoredConfigItemKey.fromSetting( setting, profileID );
-        return !storedValues.containsKey( key );
-    }
-
-    @Override
-    public Map<String, String> readLocaleBundleMap( final PwmLocaleBundle pwmLocaleBundle, final String keyName )
-    {
-        final StoredConfigItemKey key = StoredConfigItemKey.fromLocaleBundle( pwmLocaleBundle, keyName );
+        final StoredConfigKey key = StoredConfigKey.forLocaleBundle( pwmLocaleBundle, keyName, domainID );
         final StoredValue value = storedValues.get( key );
         if ( value != null )
         {
@@ -154,100 +114,73 @@ public class StoredConfigurationImpl implements StoredConfiguration
     }
 
     @Override
-    public PwmSettingTemplateSet getTemplateSet()
+    public Map<DomainID, PwmSettingTemplateSet> getTemplateSet()
     {
         return templateSet;
     }
 
-    private static PwmSettingTemplateSet readTemplateSet( final Map<StoredConfigItemKey, StoredValue> valueMap )
+    private static class TemplateSetReader
     {
-        final Set<PwmSettingTemplate> templates = EnumSet.noneOf( PwmSettingTemplate.class );
-        readTemplateValue( valueMap, PwmSetting.TEMPLATE_LDAP ).ifPresent( templates::add );
-        readTemplateValue( valueMap, PwmSetting.TEMPLATE_STORAGE ).ifPresent( templates::add );
-        readTemplateValue( valueMap, PwmSetting.DB_VENDOR_TEMPLATE ).ifPresent( templates::add );
-        return new PwmSettingTemplateSet( templates );
-    }
-
-    private static Optional<PwmSettingTemplate> readTemplateValue( final Map<StoredConfigItemKey, StoredValue> valueMap, final PwmSetting pwmSetting )
-    {
-        final StoredConfigItemKey key = StoredConfigItemKey.fromSetting( pwmSetting, null );
-        final StoredValue storedValue = valueMap.get( key );
-
-        if ( storedValue != null )
+        private static Map<DomainID, PwmSettingTemplateSet> readTemplateSet( final Map<StoredConfigKey, StoredValue> valueMap )
         {
-            try
+            final List<String> domainStrList = ValueTypeConverter.valueToStringArray( valueMap.getOrDefault(
+                    StoredConfigKey.forSetting( PwmSetting.DOMAIN_LIST, null, DomainID.systemId() ),
+                    PwmSetting.DOMAIN_LIST.getDefaultValue( PwmSettingTemplateSet.getDefault() ) ) );
+
+            final List<DomainID> domainIDList = domainStrList.stream().map( DomainID::create ).collect( Collectors.toList() );
+
+            final Map<DomainID, PwmSettingTemplateSet> templateSets = domainIDList.stream().collect( Collectors.toMap(
+                    domainID -> domainID,
+                    domainID -> readTemplateSet( valueMap, domainID )
+            ) );
+            templateSets.put( DomainID.systemId(), PwmSettingTemplateSet.getDefault() );
+            return Map.copyOf( new TreeMap<>( templateSets ) );
+        }
+
+        private static PwmSettingTemplateSet readTemplateSet( final Map<StoredConfigKey, StoredValue> valueMap, final DomainID domain )
+        {
+            final Set<PwmSettingTemplate> templates = EnumSet.noneOf( PwmSettingTemplate.class );
+            readTemplateValue( valueMap, domain, PwmSetting.TEMPLATE_LDAP ).ifPresent( templates::add );
+            readTemplateValue( valueMap, domain, PwmSetting.TEMPLATE_STORAGE ).ifPresent( templates::add );
+            readTemplateValue( valueMap, domain, PwmSetting.DB_VENDOR_TEMPLATE ).ifPresent( templates::add );
+            return new PwmSettingTemplateSet( templates );
+        }
+
+        private static Optional<PwmSettingTemplate> readTemplateValue(
+                final Map<StoredConfigKey, StoredValue> valueMap,
+                final DomainID domainID,
+                final PwmSetting pwmSetting )
+        {
+            final StoredConfigKey key = StoredConfigKey.forSetting( pwmSetting, null, domainID );
+            final StoredValue storedValue = valueMap.get( key );
+
+            if ( storedValue != null )
             {
-                final String strValue = ( String ) storedValue.toNativeObject();
-                return Optional.ofNullable( JavaHelper.readEnumFromString( PwmSettingTemplate.class, null, strValue ) );
+                try
+                {
+                    final String strValue = ( String ) storedValue.toNativeObject();
+                    return Optional.ofNullable( JavaHelper.readEnumFromString( PwmSettingTemplate.class, null, strValue ) );
+                }
+                catch ( final IllegalStateException e )
+                {
+                    LOGGER.error( () -> "error reading template", e );
+                }
             }
-            catch ( final IllegalStateException e )
-            {
-                LOGGER.error( () -> "error reading template", e );
-            }
+
+            return Optional.empty();
         }
-
-        return Optional.empty();
-    }
-
-    public String toString( final PwmSetting setting, final String profileID )
-    {
-        final StoredValue storedValue = readSetting( setting, profileID );
-        return setting.getKey() + "=" + storedValue.toDebugString( null );
     }
 
     @Override
-    public Set<StoredConfigItemKey> modifiedItems()
+    public Iterator<StoredConfigKey> keys()
     {
-        return Collections.unmodifiableSet( storedValues.keySet() );
+        return storedValues.keySet().iterator();
     }
 
     @Override
-    public List<String> profilesForSetting( final PwmSetting pwmSetting )
+    public Optional<ValueMetaData> readSettingMetadata( final StoredConfigKey key )
     {
-        final Optional<PwmSetting> profileSetting = pwmSetting.getCategory().getProfileSetting();
-        return profileSetting.map( setting -> ValueTypeConverter.valueToProfileID( setting, readSetting( setting, null ) ) )
-                .orElse( Collections.emptyList() );
-    }
-
-    @Override
-    public ValueMetaData readSettingMetadata( final PwmSetting setting, final String profileID )
-    {
-        final StoredConfigItemKey key = StoredConfigItemKey.fromSetting( setting, profileID );
-        return metaValues.get( key );
-    }
-
-    @Override
-    public StoredValue readSetting( final PwmSetting setting, final String profileID )
-    {
-        final StoredConfigItemKey key = StoredConfigItemKey.fromSetting( setting, profileID );
-        return StoredConfigurationUtil.getValueOrDefault( this, key );
-    }
-
-    @Override
-    public String valueHash()
-    {
-        return valueHashSupplier.get();
-    }
-
-    private String valueHashImpl()
-    {
-        final Set<StoredConfigItemKey> modifiedSettings = modifiedItems();
-        final StringBuilder sb = new StringBuilder();
-
-        for ( final StoredConfigItemKey storedConfigItemKey : modifiedSettings )
-        {
-            final StoredValue storedValue = storedValues.get( storedConfigItemKey );
-            sb.append( storedValue.valueHash() );
-        }
-
-        try
-        {
-            return SecureEngine.hmac( HmacAlgorithm.HMAC_SHA_512, getKey(), sb.toString() );
-        }
-        catch ( final PwmUnrecoverableException e )
-        {
-            throw new IllegalStateException( e );
-        }
+        return Optional.ofNullable( metaValues.get( key ) );
     }
 
     private PwmSecurityKey cachedKey;
@@ -275,14 +208,14 @@ public class StoredConfigurationImpl implements StoredConfiguration
     }
 
     @Override
-    public Optional<ValueMetaData> readMetaData( final StoredConfigItemKey storedConfigItemKey )
+    public Optional<ValueMetaData> readMetaData( final StoredConfigKey storedConfigKey )
     {
-        return Optional.ofNullable( metaValues.get( storedConfigItemKey ) );
+        return Optional.ofNullable( metaValues.get( storedConfigKey ) );
     }
 
     @Override
-    public Optional<StoredValue> readStoredValue( final StoredConfigItemKey storedConfigItemKey )
+    public Optional<StoredValue> readStoredValue( final StoredConfigKey storedConfigKey )
     {
-        return Optional.ofNullable( storedValues.get( storedConfigItemKey ) );
+        return Optional.ofNullable( storedValues.get( storedConfigKey ) );
     }
 }
