@@ -24,8 +24,8 @@ import password.pwm.PwmConstants;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.PwmSettingCategory;
 import password.pwm.error.PwmUnrecoverableException;
+import password.pwm.util.java.JavaHelper;
 import password.pwm.util.java.StringUtil;
-import password.pwm.util.logging.PwmLogger;
 import password.pwm.util.secure.PwmHashAlgorithm;
 import password.pwm.util.secure.SecureEngine;
 
@@ -34,22 +34,17 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public abstract class StaticMacros
 {
-    private static final PwmLogger LOGGER = PwmLogger.forClass( StaticMacros.class );
-
-    static final List<Macro> STATIC_MACROS = Collections.unmodifiableList( Stream.of(
+    static final List<Macro> STATIC_MACROS = List.of(
             new PwmSettingReference(),
             new PwmSettingCategoryReference(),
             new PwmAppName(),
             new PwmVendorName(),
             new EncodingMacro(),
             new CasingMacro(),
-            new HashingMacro()
-    ).collect( Collectors.toList() ) );
+            new HashingMacro() );
 
     private static final Set<Macro.MacroDefinitionFlag> ONLY_DEBUG_LOG_FLAG = Collections.singleton( Macro.MacroDefinitionFlag.OnlyDebugLogging );
 
@@ -152,13 +147,11 @@ public abstract class StaticMacros
             urlParameter,
             base64,;
 
-            private String encode( final String input ) throws MacroParseException
+            private String encode( final String input ) throws MacroParseException, PwmUnrecoverableException
             {
                 switch ( this )
                 {
                     case urlPath:
-                        return StringUtil.urlEncode( input );
-
                     case urlParameter:
                         return StringUtil.urlEncode( input );
 
@@ -170,16 +163,9 @@ public abstract class StaticMacros
                 }
             }
 
-            private static EncodeType forString( final String input )
+            private static Optional<EncodeType> forString( final String input )
             {
-                for ( final EncodeType encodeType : EncodeType.values() )
-                {
-                    if ( encodeType.toString().equalsIgnoreCase( input ) )
-                    {
-                        return encodeType;
-                    }
-                }
-                return null;
+                return JavaHelper.readEnumFromPredicate( EncodeType.class, type -> type.toString().equalsIgnoreCase( input ) );
             }
         }
 
@@ -210,17 +196,22 @@ public abstract class StaticMacros
             }
 
             final String encodeMethodStr = colonParts[ 1 ];
-            final EncodeType encodeType = EncodeType.forString( encodeMethodStr );
-            if ( encodeType == null )
-            {
-                throw new MacroParseException( "unknown encodeType '" + encodeMethodStr + "' for Encode macro" );
-            }
+            final EncodeType encodeType = EncodeType.forString( encodeMethodStr ).orElseThrow(
+                    () -> new MacroParseException( "unknown encodeType '" + encodeMethodStr + "' for Encode macro" ) );
+
 
             // can't use colonParts[2] as it may be split if value contains a colon.
             String value = matchValue;
             value = value.replaceAll( "^@Encode:[^:]+:\\[\\[", "" );
             value = value.replaceAll( "\\]\\]@$", "" );
-            return encodeType.encode( value );
+            try
+            {
+                return encodeType.encode( value );
+            }
+            catch ( final PwmUnrecoverableException e )
+            {
+                throw new MacroParseException( e.getErrorInformation().toDebugStr() );
+            }
         }
     }
 
@@ -284,16 +275,9 @@ public abstract class StaticMacros
                 return hashOutput.toLowerCase();
             }
 
-            private static HashType forString( final String input )
+            private static Optional<HashType> forString( final String input )
             {
-                for ( final HashType encodeType : HashType.values() )
-                {
-                    if ( encodeType.toString().equalsIgnoreCase( input ) )
-                    {
-                        return encodeType;
-                    }
-                }
-                return null;
+                return JavaHelper.readEnumFromPredicate( HashType.class, type -> type.toString().equalsIgnoreCase( input ) );
             }
         }
 
@@ -324,11 +308,8 @@ public abstract class StaticMacros
             }
 
             final String encodeMethodStr = colonParts[ 1 ];
-            final HashType encodeType = HashType.forString( encodeMethodStr );
-            if ( encodeType == null )
-            {
-                throw new MacroParseException( "unknown encodeType '" + encodeMethodStr + "' for Encode macro" );
-            }
+            final HashType encodeType = HashType.forString( encodeMethodStr ).orElseThrow(
+                    () -> new MacroParseException( "unknown encodeType '" + encodeMethodStr + "' for Encode macro" ) );
 
             // can't use colonParts[2] as it may be split if value contains a colon.
             String value = matchValue;
@@ -374,16 +355,9 @@ public abstract class StaticMacros
                 }
             }
 
-            private static CaseType forString( final String input )
+            private static Optional<CaseType> forString( final String input )
             {
-                for ( final CaseType encodeType : CaseType.values() )
-                {
-                    if ( encodeType.toString().equalsIgnoreCase( input ) )
-                    {
-                        return encodeType;
-                    }
-                }
-                return null;
+                return JavaHelper.readEnumFromPredicate( CaseType.class, type -> type.toString().equalsIgnoreCase( input ) );
             }
         }
 
@@ -414,11 +388,8 @@ public abstract class StaticMacros
             }
 
             final String encodeMethodStr = colonParts[ 1 ];
-            final CaseType encodeType = CaseType.forString( encodeMethodStr );
-            if ( encodeType == null )
-            {
-                throw new MacroParseException( "unknown caseType '" + encodeMethodStr + "' for Case macro" );
-            }
+            final CaseType encodeType = CaseType.forString( encodeMethodStr ).orElseThrow(
+                    () -> new MacroParseException( "unknown caseType '" + encodeMethodStr + "' for Case macro" ) );
 
             // can't use colonParts[2] as it may be split if value contains a colon.
             String value = matchValue;
